Added a Cron job to periodically update per-domain SpamAssassin config files from the global configuration, so that configs added by a SpamAssassin upgrade are not missing from the per-domain directories.
---- Changes since 3.41 ----
Added a new template section for defining your own PHP wrapper scripts, for use when PHP is run via CGI or FastCGI.
When a virtual server with a private IP is added, ping is now used to check if the IP is already in use.
Updated the Flyspray script installer to version 0.9.9.2, and phpPgAdmin to 4.1.2.
In the server templates pages under Default domain owner limits, added a section for specifying the features that can be used by the server owner. Previously, these were always automatically determined based on the features initially enabled when the domain was created.
Added additional warning when deleting scripts from ~/public_html.
Website validation now includes a check for PHP wrapper scripts.
Added a Module Config option to make the DNS client configuration check optional.
PHP modules are now automatically installed from CSW packages on Solaris.
Added the --default-features option to create-domain.pl, to avoid the need to specify feature flags manually.
Globally disabled features are no longer shown greyed-out on the virtual server creation and editing forms.
Under Apache 2.2, add NameVirtualHost *:80 instead of just *.
Virtual servers now have separate php.ini files for each PHP version (4 and 5), under ~/etc/php*. This allows different extensions to be loaded for each PHP version, and for different settings to exist.
Changed the layout of the Plugin Modules page to make it easier to see what is selected, and added a checkbox to have plugins available but not active by default.
The Manage Script page now shows more information about an installed script, such as the install directory, database and possibly login and password.